package com.exasol.sql;

/**
 * This interface represents an SQL statement.
 */
public interface SqlStatement extends Fragment {

}
